# PyLibImgMail

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  images.rst  index.rst  modules.rst  mymail.rst
src/: images.py  mymail.py
test/: images_test.py  mymail_test.py
