[build-system]
requires = ["setuptools==65.5.0", "Pillow==10.0.0", "requests==2.31.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyLibImgMail"
version = "1.0.0"
description = "Biblioteca de prueba, para descarga/manejo de imágenes y envío de correos rápidos."
authors = [
    {name="Jean Carlo Hernández Arguedas", email="jc.hdez.1294@gmail.com"},
]
readme = "Readme.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/jchdez1294/PyLibImgMail"
